added miscalibration test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,15 @@ S3method(as.reliabilitydiag,numeric)
 S3method(as.reliabilitydiag,reliabilitydiag)
 S3method(autoplot,reliabilitydiag)
 S3method(c,reliabilitydiag)
+S3method(miscalibration_test,numeric)
+S3method(miscalibration_test,reliabilitydiag)
 S3method(plot,reliabilitydiag)
 S3method(print,reliabilitydiag)
 S3method(print,summary.reliabilitydiag)
 S3method(summary,reliabilitydiag)
 export(as.reliabilitydiag)
 export(is.reliabilitydiag)
+export(miscalibration_test)
 export(reliabilitydiag)
 export(reliabilitydiag0)
 importFrom(ggplot2,autoplot)
