--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person(c("Alexander", "I."), "Jordan", role = c("aut", "cre"), email = "alexander.jordan@h-its.org"))
 Description: plot reliability diagrams based on PAVA binning.
 URL: https://github.com/aijordan/reliabilitydiag/
-License: GPL-3
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
