changed name inheritance; CEP estimate added to 'cases'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method("[",reliabilitydiag)
 S3method(as.reliabilitydiag,data.frame)
 S3method(as.reliabilitydiag,default)
-S3method(as.reliabilitydiag,numeric)
 S3method(as.reliabilitydiag,reliabilitydiag)
 S3method(autoplot,reliabilitydiag)
 S3method(c,reliabilitydiag)
@@ -21,3 +20,4 @@ export(reliabilitydiag0)
 importFrom(ggplot2,autoplot)
 importFrom(magrittr,`%>%`)
 importFrom(rlang,.data)
+importFrom(vctrs,vec_as_names)
