added discrimination diagrams
autoplot.reliabilitydiag() parameters now include a 'type' argument that determines the inclusion and default values of the added layers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(is.reliabilitydiag)
 export(miscalibration_test)
 export(reliabilitydiag)
 export(reliabilitydiag0)
+importFrom(ggExtra,ggMarginal)
 importFrom(ggplot2,autoplot)
 importFrom(magrittr,`%>%`)
 importFrom(rlang,.data)
