--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(print,reliabilitydiag)
 S3method(print,summary.reliabilitydiag)
 S3method(summary,reliabilitydiag)
 export(as.reliabilitydiag)
+export(autoplot)
 export(is.reliabilitydiag)
 export(miscalibration_test)
 export(reliabilitydiag)
