--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -1,8 +1,8 @@
 pandoc: 2.7.3
-pkgdown: 1.5.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-09-28T07:21Z
+articles: {}
+last_built: 2020-11-11T16:25Z
 urls:
   reference: https://aijordan.github.io/reliabilitydiag//reference
   article: https://aijordan.github.io/reliabilitydiag//articles
