--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: reliabilitydiag
-Version: 0.1.1
+Version: 0.1.2
 Title: Reliability Diagrams Using Isotonic Regression
 Description: Checking the reliability of predictions via the CORP approach,
     which generates provably statistically Consistent, Optimally binned, and
@@ -13,7 +13,7 @@ Authors@R: c(
            role = c("aut", "cre"),
            email = "alexander.jordan@h-its.org"))
 URL: https://github.com/aijordan/reliabilitydiag/
-License: GPL-3 + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
